# hop

./: .gitignore  README.md  index.html  lgtst.html  lgtst.html.md  nbuse.html  nbuse.html.md  ossys.html  ossys.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
hop/: _modidx.py  nb_utils.py  nbs.py
nbs/: index.ipynb  nbdev.yml  nbs.ipynb
src/hop/: __init__.py
