[project]
name="hop"
version = "0.1.0"
description = "Utilities that I use regularly"
readme = "README.md"
authors = [
    { name = "Hopsakee", email = "jdejong@posteo.nl" }
]
requires-python=">=3.9"
dependencies = [
    "pip>=25.0.1",
]

[project.scripts]
hop = "hop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbdev>=2.4.2",
]
